# atuls-art-gallery

./: .gitattributes  .gitignore  General Asset License.txt  LICENSE.txt  README.md  art_objects.gd  auto_saver.gd  build-initial-db.sh  build-plugin.sh  deploy-macos.sh  deploy-windows.sh  export_presets.cfg  icon.svg.import  infinite_gallery.gd  infinite_gallery.tscn  lobby.gd  met_objects.gd  moma.gd  moma.tscn  painting.gd  panku_config.cfg  persisted_config.gd  plugin.gdextension  project.godot
Controller/: Player.gd  Player.tscn  SmoothCamera.gd  player_input.gd
Levels/: WorldEnvironment.gd  atul.gd  atul.tscn  atul2.blend  atul2.blend.unwrap_cache  atul2.exr  atul2.exr.import  environment.tres  environment_potato.tres  gallery_light.gd  gallery_light.tscn  infinite_gallery.gd  infinite_gallery.tscn  main_menu.gd  main_menu.tscn  moma-gallery.blend  moma-gallery.blend.import  moma-gallery.glb  moma-gallery.glb.import  moma-gallery.walls.json  (+10 more)
rust/cli/: Cargo.toml
rust/cli/src/: layout.rs  main.rs  met_csv.rs  random.rs  wikidata_dump.rs
rust/cli/src/wikidata_dump/: README.md  index_file.rs  mod.rs  query.rs  sledcache.rs  sparql_csv_export.rs
rust/gallery/: Cargo.toml
rust/gallery/src/: art_object.rs  filter_parser.rs  gallery_cache.rs  gallery_db.rs  gallery_db_migration.rs  gallery_wall.rs  image.rs  layout.rs  lib.rs  met_api.rs  met_csv.rs  random.rs  the_met.rs  wikidata.rs
rust/plugin/: Cargo.toml
rust/plugin/src/: art_object.rs  gallery_client.rs  gallery_response.rs  lib.rs  met_object.rs  met_response.rs  singleton.rs  worker_thread.rs
(+54 files in other folders)
