[package]
name = "gallery"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
ureq = { version = "2.9.7" }
rusqlite = { version = "0.31.0", features = ["bundled"] }
md5 = "0.7.0"
percent-encoding = "2.3.1"
nom = "7.1.3"
