[package]
name = "plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
gallery = { path = "../gallery" }
anyhow = "1.0.86"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
